--- a/main.css
+++ b/main.css
@@ -15,3 +15,22 @@ ul {
     color:black;
     font-family: avenir;
 }
+ul {
+    list-style-type:none;
+    margins:0;
+    padding:0;
+    width:750px;
+    background-color:#flflfl;
+}
+li a {
+    display:block;
+    color:#000;
+    padding:8px 0 8px 16px;
+    text-decoration: none;
+    }
+
+/* Change the link color on hover */
+li a:hover {
+    background-color:#555;
+    color:white;
+}
