--- a/box-model-assignment/box-model.css
+++ b/box-model-assignment/box-model.css
@@ -1,6 +1,7 @@
 body {
   margin: 20px;
-    font-family: sans-serif
+    font-family: sans-serif;
+    
 }
 
 * {
@@ -16,8 +17,13 @@ nav a {
     display: inline-block;
     height: 60px;
     background-color: slategray;
-    padding: 20px;
-    margin: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right:20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-bottom:20px;
     border-radius: 10px;
     text-align: center;
     font-size: 18px;
@@ -27,9 +33,11 @@ nav a {
 header{
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 10px;
+    padding-left: 20px;
     padding-right: 10px;
-    margin: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-bottom: 20px;
     border: 0px;
     background-color: #eeeeee;
     font-size: 24;
@@ -45,4 +53,27 @@ div img {
     padding-bottom: 10px;
     padding-right: 10px;
     padding-left:10px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+p {
+    font-family: sans-serif;
+    font-size: 20px;
+    padding-right: 10px;
+    padding-left: 20px;
+}
+footer {
+    border-top: 2px dashed grey;
+    border-left: 2px dashed grey;
+    border-right: 2px dashed grey;
+    border-bottom: 2px dashed grey;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    margin-right: 20px;
+    margin-left: 20px;
+    font-size: 20px;
+    }
+footer a{
+    text-decoration: underline;
+    color: grey
 }
