--- a/box-model-assignment/box-model.css
+++ b/box-model-assignment/box-model.css
@@ -38,6 +38,7 @@ header{
     margin-top: 10px;
     margin-left: 20px;
     margin-bottom: 20px;
+    margin-right: 20px;
     border: 0px;
     background-color: #eeeeee;
     font-size: 24;
@@ -57,10 +58,14 @@ div img {
     margin-left: 20px;
 }
 p {
+    display:block;   
     font-family: sans-serif;
     font-size: 20px;
     padding-right: 10px;
-    padding-left: 20px;
+    padding-left: px;
+    margin-left: 20px;
+    margin-right: 20px;
+    
 }
 footer {
     border-top: 2px dashed grey;
