--- a/Portfolio/iankelley_portfolio.css
+++ b/Portfolio/iankelley_portfolio.css
@@ -2,12 +2,10 @@
     box-sizing: border-box;
 }
 .main-container {
-    width: 900px;
+    height: 700px;
+    width: 700px;
     margin: 0 auto 0 auto;
-    font-family: sans-serif
-}
-.promo-container {
-    background-color: lightgrey;
+
 }
 
 .branding {
@@ -16,33 +14,64 @@
     padding-left: 20px;
     margin-right: auto;
 }
+/*Header*/
 
 header {
     display: flex;
     background-color: black;
     opacity: 0.8;
+    margin: 25px 0px 0px 0px;
 }
 .header-name {
     display: inline-block;
     color: ghostwhite;
     padding: 20px 30px 20px 30px;
     margin-right: auto;
-    text-transform: capitalize;
-    letter-spacing: 3px;
-    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    font-size: 18px;
+    font-family: athelas;
     
 }
 h1 {}
 
 .Nav-button {
-    display: inline-block;
-    padding: 0px 30px 0px 30px;
-    margin: 30px; 0px; 0px; 0px; 
+    display: inline-flex; 
+    align-items: center;
     color: ghostwhite;
     text-decoration: none;
-    text-align: center;
     font-family: avenir;
     font-size: 14px;
+    margin: 35px;
+    letter-spacing: 2px;
+}
+/* Main Body*/ 
+
+section {
+    display:flex;
+    margin: 150px 50px 150px 50px;
+}
+.circle-button {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 150px;
+    height: 150px;
+    background-color: black;
+    opacity: 0.8;
+    color:ghostwhite;
+    text-transform: uppercase;
+    border-radius: 50%;
+    text-decoration: none;
+    font-family: avenir;
+    letter-spacing: 4px;
 }
 
+/* Footer*/
+
+footer {
+    display:inline-flex;
+    margin: 50px;
+}
 
