Layout Practice Session 2
second commit of layout practice session 2

--- a/LayoutPractice/LayoutPractice.css
+++ b/LayoutPractice/LayoutPractice.css
@@ -66,8 +66,9 @@ header {
     overflow: hidden;
 }
 .product-buy-it-now {
-    justify-content: center;
+    align-items: center;
 }
 .product-info {
     text-align: right;
+    padding-left: 20px;
 }
