--- a/LayoutPractice/LayoutPractice.css
+++ b/LayoutPractice/LayoutPractice.css
@@ -78,3 +78,23 @@ header {
     color:white;
     padding: 50px;
     text-align: center;
+}
+/* Footer*/
+
+footer {
+    display:flex;
+    padding: 15px; 10px 15px 10px;
+    font-size: 12px; 
+}
+
+.footer-links {
+    flex: 1;
+}
+
+.footer-copy {
+    flex: 1;
+    text-align: right;
+}
+.footer-copy p{
+    margin: 0;
+}
