--- a/LayoutAssignment/layout-assignment.css
+++ b/LayoutAssignment/layout-assignment.css
@@ -79,3 +79,37 @@
     background: yellow;
     display: flex;
 }
+
+/* example 3*/
+
+.example-3{
+    flex-wrap: wrap;
+    align-content: stretch;
+    background: grey;
+    border: solid 6px;
+    margin-bottom: 130px;
+}
+.header {
+    display: flex;
+    width: 920px;
+    height: 120px;
+    margin: 20px 20px 20px 20px;
+    background-color: red;
+}
+.aside {
+    display: flex;
+    width: 175px;
+    height: 395px;
+    background-color: green;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+   
+}
+.body {
+    width: 730px;
+    height: 395px;
+    background-color: blue;
+    margin: 0px 20px 20px 0px;
+    
+}
