--- a/Blog/blog-post.css
+++ b/Blog/blog-post.css
@@ -4,7 +4,7 @@
 }
 .header {
     margin: auto;
-    font-family: "Indie Flower", cursive;
+    font-family: 'Permanent Marker', cursive;
     font-size: 72px;
 }
 
