--- a/WEB FINAL/final.css
+++ b/WEB FINAL/final.css
@@ -59,8 +59,74 @@ p {
  
 }
 
+.pricing {
+    width: 125px;
+    height: 35px;
+    background-color: black;
+    color: ghostwhite;
+    text-align: center;
+    position: absolute;
+    top: 500px;
+    left: 550px;
+    padding-top: 15px;
+    border-radius: 50px;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    
+}
 .feature-container {
     display: flex;
     margin: 70px 20px 20px 20px;
-    justify-content: space-between
+    justify-content: space-between;
+}
+
+.feature-item-1 feature-item-2 feature-item-3 feature-item-4{
+    background-size:cover;
+    background-position: center;
+}
+
+.feature-item-1 h1{
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+.feature-item-2 h1{
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+.feature-item-3 h1{
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+.feature-item-4 h1{
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.feature-item-1 p{
+    text-align: center;
+    padding: 8px;
+    line-height: 25px;
+    letter-spacing: 1.3px
+}
+.feature-item-2 p{
+    text-align: center;
+    padding: 8px;
+    line-height: 25px;
+    letter-spacing: 1.3px;
+}
+.feature-item-3 p{
+    text-align: center;
+    padding: 8px;
+    line-height: 25px;
+    letter-spacing: 1.3px;
+}
+.feature-item-4 p{
+    text-align: center;
+    padding: 8px;
+    line-height: 25px;
+    letter-spacing: 1.3px;
 }
