almost done with 1st page

--- a/WEB FINAL/final.css
+++ b/WEB FINAL/final.css
@@ -130,3 +130,9 @@ p {
     line-height: 25px;
     letter-spacing: 1.3px;
 }
+
+.feature-end{ 
+    padding-left: 20px;
+    line-height: 1.4;
+    float: left;
+}
