--- a/WEB FINAL/final.css
+++ b/WEB FINAL/final.css
@@ -40,7 +40,9 @@ a:hover {
 }
 
 .today{
-    margin: auto;
+    position: relative;
+    top:100px;
+    left: 175px;
     text-align: center;
     height: 225px;
     width: 450px;
@@ -65,9 +67,9 @@ p {
     background-color: black;
     color: ghostwhite;
     text-align: center;
-    position: absolute;
-    top: 500px;
-    left: 550px;
+    position: relative;
+    top: 350px;
+    right: 150px;
     padding-top: 15px;
     border-radius: 50px;
     text-transform: uppercase;
@@ -77,7 +79,6 @@ p {
 .feature-container {
     display: flex;
     margin: 70px 20px 20px 20px;
-    justify-content: space-between;
 }
 
 .feature-item-1 feature-item-2 feature-item-3 feature-item-4{
@@ -132,7 +133,14 @@ p {
 }
 
 .feature-end{ 
+    margin-bottom: 20px;
     padding-left: 20px;
     line-height: 1.4;
     float: left;
+}
+footer{
+    display: flex;
+    background-color: lightgray;
+    width: 900px;
+    height: 100px;
 }
