--- a/WEB FINAL/final.css
+++ b/WEB FINAL/final.css
@@ -67,8 +67,9 @@ p {
     background-color: black;
     color: ghostwhite;
     text-align: center;
+    align-content: center;
     position: relative;
-    top: 350px;
+    top: 340px;
     right: 150px;
     padding-top: 15px;
     border-radius: 50px;
@@ -76,6 +77,11 @@ p {
     letter-spacing: 1.5px;
     
 }
+.pricing-button {
+    justify-content: center;
+}
+
+
 .feature-container {
     display: flex;
     margin: 70px 20px 20px 20px;
@@ -140,7 +146,29 @@ p {
 }
 footer{
     display: flex;
+    justify-content: flex-end;
     background-color: lightgray;
     width: 900px;
-    height: 100px;
+    height: 75px;
+    padding-top: 2px;
+    padding-bottom: 20px;
+    
+    
+}
+footer a{
+    align-content: flex-end;
+    justify-content: flex-end;
+    color: ghostwhite;
+    position: relative;
+    left: 35px;
+    margin: 5px;
+
+}
+.footer-links{
+    color: ghostwhite;
+    align-content: flex-end;
+    text-align: left;
+    padding: 20px;
+   
+    
 }
