pricing button fixed

--- a/WEB FINAL/final.css
+++ b/WEB FINAL/final.css
@@ -79,6 +79,9 @@ p {
 }
 .pricing-button {
     justify-content: center;
+    color: ghostwhite;
+    text-decoration: none;
+    letter-spacing: 2.3px;
 }
 
 
