--- a/WEB FINAL/features.css
+++ b/WEB FINAL/features.css
@@ -64,13 +64,44 @@ footer{
     background-size:cover;
     background-position: bottom;
 }
+.feature-5image{
+    display: flex;
+    margin: 60px 20px 20px 20px;
+    padding: 20px;
+    height: 150px;
+    width: 825px;
+    justify-content: center;
+}
+.pricing-button {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    color: black;
+    text-decoration: none;
+    letter-spacing: 2.3px;
+    width: 200px;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    padding: 10px;
+    border-style: solid;
+    border-width: 5px;
+    font-size: 20px;
+    text-transform: uppercase;
+    
+   
+}
+
+.feature-image-big p{
+    font-size: 16px;
+}
 footer a{
-    font-family: "cabin" "Avenir" "Arial" "Sans-serif";
+    font-family: "cabin", "Avenir", "Arial", "Sans-serif";
     align-content: flex-end;
     justify-content: flex-end;
     color: ghostwhite;
     position: relative;
-    left: 35px;
+    left: -5px;
     margin: 5px;
 
 }
