--- a/WEB FINAL/features.css
+++ b/WEB FINAL/features.css
@@ -66,6 +66,7 @@ p {
     display: flex;
     justify-content: center;
     align-content: center;
+    background-color: aliceblue;
     color: black;
     text-decoration: none;
     letter-spacing: 2.3px;
