--- a/WEB FINAL/blog.css
+++ b/WEB FINAL/blog.css
@@ -1,18 +1,18 @@
 .main-container {
+    
     width: 900px;
     margin: 0 auto 0 auto;
     font-family: 'Cabin', "avenir", "arial", sans-serif;
     letter-spacing: 1px;
     line-height: 1.4;
 }
-
 header {
     display: flex;
     background-color: lightgray;
     padding: 20px;
 }
 a:hover {
-    background-color: gray;
+    background-color: lavender;
     text-decoration: none;
 }
 .nav-button {
@@ -27,62 +27,46 @@ a:hover {
     width: 150px;
     height: 45px;
 }
+
+h1 {
+    font-family: "cabin", "avenir", "arial", "sans-serif";
+    font-size: 36px;
+    text-align: justify;
+    margin: 20px;
+}
 h3 {
     font-family: "cabin", "avenir", "arial", "sans-serif";
     font-size: 20px;
     text-align: center;
     
 }
-    
 p {
     font-family: "cabin", "avenir", "arial", "sans-serif";
     font-size: 13px;
-    text-align: center;
-}
-.feature-page-row-1{
-    display: flex;
+    text-align: justify;
+    font-size: 16px;
     margin: 20px;
-    justify-content: space-around;
+}
+.blog-image-1{
+    float: right;
+    background-image: url(Photos/birds.jpg);
+    width: 400px;
+    height: 250px;
+    margin: 5px 20px 20px 20px;
+    background-size:cover;
+    background-position: center;
 }
 
-
-
-.feature-image-big{
-    margin: 60px 20px 20px 20px;
-    height: 425px;
-    background-image: url(Photos/cabin-rental-2.jpg);
+.blog-image-2{
+    float: left;
+    background-image: url(Photos/fox.jpg);
+    width: 400px;
+    height: 250px;
+    margin: 5px 20px 20px 20px;
     background-size:cover;
     background-position: bottom;
 }
-.feature-5image{
-    display: flex;
-    margin: 60px 20px 20px 20px;
-    padding: 20px;
-    height: 150px;
-    width: 825px;
-    justify-content: center;
-}
-.pricing-button {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    color: black;
-    text-decoration: none;
-    letter-spacing: 2.3px;
-    width: 200px;
-    margin: auto;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    padding: 10px;
-    border-style: solid;
-    border-width: 5px;
-    font-size: 20px;
-    text-transform: uppercase;
-}
 
-.feature-image-big p{
-    font-size: 16px;
-}
 footer{
     display: flex;
     justify-content: flex-end;
@@ -92,7 +76,6 @@ footer{
     padding-top: 2px;
     padding-bottom: 20px;
     margin: auto;
-    
 }
 footer a{
     font-family: "cabin", "Avenir", "Arial", "Sans-serif";
@@ -100,7 +83,7 @@ footer a{
     justify-content: flex-end;
     color: white;
     position: relative;
-    left: -5px;
+    left: 45px;
     margin: 5px;
 
 }
